--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Introduction</h1>
+    The answer is: <span id="demo"></span>
+    <script src="test.js"></script>
+    
 </body>
 </html>
